<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Welcome</string>
    <string name="todo">TODO</string>
    <string name="getstarted">Get started</string>
    <string name="welcome_to_nofi">Welcome to NOFI</string>
    <string name="hello">Hello</string>
    <string name="type_of_account">Type of account:</string>
    <string name="login">Login</string>
    <string name="new_user_register_now">New user? Register now</string>
    <string name="register">Register</string>
    <string name="select_the_type_of_account_and_get_started">Select the type of account and get started!</string>
    <string name="hope_you_enjoy_the_stay">Hope you enjoy the stay</string>
    <string name="institute_code">Institute code</string>
    <string name="user_id">User id</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="enter_a_new_world">Enter a new world</string>
    <string name="registration">Registration</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>

    <string-array name="Type">
        <item> None </item>
        <item> Student </item>
        <item> Teacher </item>
    </string-array>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

</resources>
