<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <android.support.design.widget.AppBarLayout
        android:elevation="100dp"
        android:background="@drawable/appbar_edges"
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:padding="55dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/hello"
            android:textColor="@color/white"
            android:textSize="55sp" />

        <TextView
            android:id="@+id/textView0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_light"
            android:text="@string/select_the_type_of_account_and_get_started"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedScrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar"
        app:layout_constraintVertical_bias="0.042">


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:context=".LoginAndRegister"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="8dp">


            <LinearLayout
                android:id="@+id/transitions_container"
                android:layout_width="351dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="@id/appbar">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="1dp"
                        android:text="@string/type_of_account"
                        android:textSize="14sp" />

                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:fontFamily="@font/roboto"
                        android:spinnerMode="dropdown"
                        android:textColorHint="#1E88E3"
                        android:textSize="15sp" />
                </LinearLayout>

                <Button
                    android:id="@+id/bt"
                    android:layout_width="117dp"
                    android:layout_height="34dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/button_edges_min_radius"
                    android:fontFamily="@font/roboto_bold"
                    android:inputType="textCapCharacters"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:typeface="normal"
                    android:visibility="gone"
                    app:layout_anchor="@+id/imageView"
                    app:layout_anchorGravity="bottom|center"
                    tools:fontFamily="@font/roboto" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/roboto_light"
                    android:text="@string/new_user_register_now"
                    android:textSize="17sp"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/bt2"
                    android:layout_width="117dp"
                    android:layout_height="34dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/button_edges_min_radius"
                    android:fontFamily="@font/roboto_bold"
                    android:inputType="textCapCharacters"
                    android:text="@string/register"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:typeface="normal"
                    android:visibility="gone"
                    tools:fontFamily="@font/roboto" />


            </LinearLayout>


        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>

    <View
        android:id="@+id/v1"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.957"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="4dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/v1"
        app:layout_constraintVertical_bias="0.111"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />
</android.support.constraint.ConstraintLayout>